--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Table</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <table>
+<table>
 <thead>
 <tr>
     <th>Choose your plan</th>
-    <th>starter $10 per month</th>
-    <th>econom $30 per month</th>
-    <th>standart $59 per month</th>
-    <th>professional $99 per month</th>
+    <th><p>starter</p><p>$10</p><p>per month</p> </th>
+    <th><p>econom</p><p>$30</p><p>per month</p></th>
+    <th><p>standart</p><p>$59</p><p>per month</p></th>
+    <th><p>professional</p><p>$99</p><p>per month</p></th>
 </tr>
 </thead>
 
@@ -68,12 +69,14 @@
 </tbody>
 
 <tfoot>
-<td></td>
-<td><button>Start</button></td>
-<td><button>Start</button></td>
-<td><button>Start</button></td>
-<td><button>Start</button></td>
+  <tr>
+    <td></td>
+    <td><button class="overflow">Start</button></td>
+    <td><button class="overflow">Start</button></td>
+    <td><button class="overflow">Start</button></td>
+    <td><button class="overflow">Start</button></td>
+  </tr>
 </tfoot>
-    </table>
+</table>
 </body>
 </html>
